<resources>
    <string name="app_name">FileManager</string>
    <string name="search_text">Search</string>
    <string name="search_hint">Search file name</string>
    <string name="two_back_touch_exit_app">To exit the app, press the Back button again.</string>
    <string name="banner_ad_unit_id">ca-app-pub-9674501681746717/8860963787</string>
    <string name="reward_ad_unit_id">ca-app-pub-9674501681746717/1337696986</string>
    <string name="action_settings">Settings</string>
    <string name="action_list_mode">List mode</string>
    <string name="action_select_mode">Select</string>
    <string name="action_create_folder">Create folder</string>
    <string name="action_move">Move</string>
    <string name="action_copy">Copy</string>
    <string name="action_rename">Rename</string>
    <string name="action_zip">Zip</string>
    <string name="action_detail">Details</string>
    <string name="toolbar">FileManager</string>
    <string name="toolbar2">Selected</string>
    <string name="action_check">check</string>
    <string name="create_folder_title">Create folder</string>
    <string name="create_folder_hint">New folder</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="my_file">MyFile</string>
    <string name="sdcard_name">Sdcard</string>
    <string name="remote_file">Remote_File</string>
    <string name="delete_title">Delete items</string>
    <string name="delete_message">items will be deleted.</string>
    <string name="delete">DELETE</string>
    <string name="deleting">Deleting</string>
    <string name="action_paste">Paste</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="read_only">ReadOnly</string>
    <string name="rename_title">Rename</string>
    <string name="rename">RENAME</string>
    <string name="choose_application">Choose an application to open with</string>
    <string name="title_activity_ftp_server_settings">FTP Server Settings</string>
    <string name="guest">Guest</string>
    <string name="ftp_server_settings">FTP Server Settings</string>
    <string name="ftp_server_port">Port Number</string>
    <string name="ftp_server_user_settings">User Settings</string>
    <string name="ftp_server_user_id">UserID</string>
    <string name="ftp_server_user_pwd">Password</string>
    <string name="network_disconntion">Device not connected to network. Please try again after connecting.</string>
    <string name="connection_addr">Server Address :</string>
    <string name="ftp_server_start">Server Start</string>
    <string name="ftp_server_status">Server status</string>
    <string name="ftp_server_running">FTP Server is running</string>
    <string name="ftp_server_stoped">FTP Server is not running</string>
    <string name="connection_address">Connection address</string>
    <string name="internal_sdcard">Internal Sdcard</string>
    <string name="sdcard">Sdcard</string>
    <string name="show_ads">Show Ads</string>

</resources>
